--- a/README
+++ b/README
@@ -4,4 +4,4 @@ The instances of the maximum satisfiability problem in Proof-of-SAT are determin
 
 This algorithm incorporates the maximum satisfiability problem but this selection was done somewhat arbitrarily. There are many computational problems that would be ideal as a blockchain consensus algorithm and may provide more useful statistics than the Proof-of-SAT algorithm. MAX-SAT being an NP-complete problem means that it can be reduced to any other NP-complete problem whichs opens the door to a wealth of problems that could potentially be encoded as a blockchain consensus algorithm, so long as they can be approximated effectively.
 
-Furthermore, any problem that can be solved or approximated within a predetermined degree only needs to have the ability to have an instance be generated pseudorandomly and deterministically to be elgible to be created into a blockchain consensus algorithm. This process is performed within the `solution_to_sat` function in Proof-of-SAT in such a way that could be easily generalized to other problems. However, an effective blockchain consensus algorithm will have other features as well such as being hard to solve and easy to verify, having adjustable difficulty, and having a predictable solve time. Hopefully, Proof-of-SAT serves as an effective model of what is possible with blockchain consensus algorithms.
+Furthermore, any problem that can be solved or approximated within a predetermined degree only needs to have the ability to have an instance be generated pseudorandomly and deterministically to be elgible to be created into a blockchain consensus algorithm. This process is performed within the solution_to_sat function in Proof-of-SAT in such a way that could be easily generalized to other problems. However, an effective blockchain consensus algorithm will have other features as well such as being hard to solve and easy to verify, having adjustable difficulty, and having a predictable solve time. Hopefully, Proof-of-SAT serves as an effective model of what is possible with blockchain consensus algorithms.
